--- a/themes/hugo-uilite/static/css/styles.css
+++ b/themes/hugo-uilite/static/css/styles.css
@@ -60,7 +60,7 @@ a:hover {
   right: 0;
   -webkit-transform: translateX(100%);
           transform: translateX(100%);
-  background-color: rgb(194, 194, 194);
+  background-color: #FFF;
 }
 
 article {
