--- a/themes/hugo-uilite/layouts/partials/header.html
+++ b/themes/hugo-uilite/layouts/partials/header.html
@@ -15,6 +15,7 @@
 	</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="icon" href="{{ .Site.BaseURL }}images/favicon.png">
 	<!-- Including the bootstrap -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<!-- Social Icon fonts -->
@@ -24,7 +25,6 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:800" rel="stylesheet">
 	<link rel="stylesheet" href="{{ .Site.BaseURL }}css/highlight.css">
 	<!-- Font awesome -->
-	<!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous"> -->
 	<script src="https://kit.fontawesome.com/8d552508d5.js" crossorigin="anonymous"></script>
 
 	<!-- Meta tags -->
