--- a/themes/hugo-uilite/static/css/styles.scss
+++ b/themes/hugo-uilite/static/css/styles.scss
@@ -1,6 +1,6 @@
-*{
-  // outline: 1px solid red;
-}
+// *{
+//    outline: 1px solid red;
+// }
 
 html{
   overflow-x: hidden;
@@ -53,7 +53,7 @@ a{
     content: '';
     top: 0; bottom: 0;
     left: 0; right: 0;
-    transition: all 0.8s cubic-bezier(0.79, 0, 0.05, 0.83);;
+    transition: all 0.4s cubic-bezier(0.79, 0, 0.05, 0.83);;
     background-color: #fff;
   }
 
