--- a/themes/hugo-uilite/layouts/partials/header.html
+++ b/themes/hugo-uilite/layouts/partials/header.html
@@ -14,7 +14,7 @@
 			{{ end }}
 	</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
 	<link rel="icon" href="{{ .Site.BaseURL }}images/favicon.png">
 	<!-- Including the bootstrap -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
