--- a/themes/hugo-uilite/layouts/partials/sidebar.html
+++ b/themes/hugo-uilite/layouts/partials/sidebar.html
@@ -5,7 +5,7 @@
 <section id="sidebar" class="sidebar d-flex align-items-center p-5">
   <div class="main-info">
 
-    <img src="{{.Site.BaseURL}}images/{{ $sidebar.displayPicture }}" class="rounded-circle mb-3" width="160px">
+    <img src="{{.Site.BaseURL}}images/{{ $sidebar.displayPicture }}" class="rounded-circle mb-3" width="160px" alt="sanchit arora">
 
     <h1 class="heading">{{ $sidebar.title }} <br /><span class="highlight">{{ $sidebar.highlightedText }}</span></h1>
     <p class="text-muted">{{ $sidebar.description }}</p>
