--- a/themes/hugo-uilite/static/css/styles.css
+++ b/themes/hugo-uilite/static/css/styles.css
@@ -1,3 +1,7 @@
+/* *{
+  outline: 1px solid red;
+} */
+
 html {
   overflow-x: hidden;
   overflow-y: scroll;
@@ -49,8 +53,8 @@ a:hover {
   bottom: 0;
   left: 0;
   right: 0;
-  -webkit-transition: all 0.8s cubic-bezier(0.79, 0, 0.05, 0.83);
-  transition: all 0.8s cubic-bezier(0.79, 0, 0.05, 0.83);
+  -webkit-transition: all 0.4s cubic-bezier(0.79, 0, 0.05, 0.83);
+  transition: all 0.4s cubic-bezier(0.79, 0, 0.05, 0.83);
   background-color: #FFF;
   clear: both;
 }
