--- a/themes/hugo-uilite/layouts/partials/experience.html
+++ b/themes/hugo-uilite/layouts/partials/experience.html
@@ -12,7 +12,7 @@
         <h6 class="h3 my-2">{{ $element.company }}</h6>
         {{ $website := $element.website }}
         {{ if $website }}
-        <a target="_blank" href="{{ $website }}">
+        <a target="_blank" href="{{ $website }}" rel="noopener noreferrer">
           <i class="fas fa-link"></i>
           {{ $website }}
         </a>
