--- a/themes/hugo-uilite/layouts/partials/header.html
+++ b/themes/hugo-uilite/layouts/partials/header.html
@@ -16,14 +16,12 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
 	<link rel="icon" href="{{ .Site.BaseURL }}images/favicon.webp">
-	<!-- Including the bootstrap -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	<!-- Social Icon fonts -->
-	<link rel="stylesheet" href="https://d1azc1qln24ryf.cloudfront.net/114779/Socicon/style-cf.css?u8vidh">
+	<!-- Including Bootstrap -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+	<!-- Including custom styles -->
 	<link rel="stylesheet" type="text/css" href="{{.Site.BaseURL}}css/styles.css">
 	<!-- Including google fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:800" rel="stylesheet">
-	<link rel="stylesheet" href="{{ .Site.BaseURL }}css/highlight.css">
 	<!-- Font awesome -->
 	<script src="https://kit.fontawesome.com/8d552508d5.js" crossorigin="anonymous"></script>
 
