Add custom cursor

--- a/themes/hugo-uilite/layouts/index.html
+++ b/themes/hugo-uilite/layouts/index.html
@@ -8,8 +8,7 @@
 </div>
 
 <div style="z-index: 4; position: relative;">
-	{{ if gt (len (where .Data.Pages "Type" "blog")) 0 }}{{ partial "blog.html" . }}{{ end }}
-	{{ if gt (len (where .Data.Pages "Type" "work")) 0 }}{{ partial "work.html" . }}{{ end }}
+	<!-- insert blog here -->
 </div>
 
 <div class="main-content">
