--- a/themes/hugo-uilite/layouts/partials/header.html
+++ b/themes/hugo-uilite/layouts/partials/header.html
@@ -19,7 +19,9 @@
 	<!-- Including Bootstrap -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 	<!-- Including custom styles -->
-	<link rel="stylesheet" type="text/css" href="{{.Site.BaseURL}}css/styles.css">
+	<link id="LTT"  rel="stylesheet" type="text/css" href="{{.Site.BaseURL}}css/styles.css">
+	<!-- Dark mode stylesheet -->
+	<link disabled id="dark-mode-theme" rel="stylesheet" type="text/css" href="{{.Site.BaseURL}}css/dark_styles.css">
 	<!-- Including google fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:800" rel="stylesheet">
 	<!-- Font awesome -->
