--- a/themes/hugo-uilite/layouts/partials/sidebar.html
+++ b/themes/hugo-uilite/layouts/partials/sidebar.html
@@ -3,6 +3,7 @@
 {{ $socialfas := .Site.Data.socialfas}}
 
 <section id="sidebar" class="sidebar d-flex align-items-center p-5">
+  <span style="position: absolute; top: 4vh; right: 5vw; cursor: pointer;" id="dark-mode-toggle" class="light"><i class="fas fa-adjust fa-lg"></i></span>
   <div class="main-info">
 
     <img src="{{.Site.BaseURL}}images/{{ $sidebar.displayPicture }}" class="rounded-circle mb-3" width="160px" alt="sanchit arora">
