--- a/themes/hugo-uilite/layouts/partials/contact.html
+++ b/themes/hugo-uilite/layouts/partials/contact.html
@@ -11,18 +11,18 @@
       <form action="https://formspree.io/{{ $config.email }}" method="post">
         <div class="form-row">
           <div class="col-12 col-xl-6 col-lg-6 col-md-6">
-            <label>Name</label>
+            <label for="name">Name</label>
             <input type="text" class="form-control" name="name" placeholder="Name">
           </div>
           <div class="col-12 col-xl-6 col-lg-6 col-md-6">
-            <label>Email</label>
+            <label for="_replyto">Email</label>
             <input type="email" class="form-control" name="_replyto" placeholder="Email">
           </div>
         </div>
 
         <div class="form-group">
-          <label>Message</label>
-          <textarea placeholder="Message" name="message" class="form-control" rows="4"></textarea>
+          <label for="message">Message</label>
+          <textarea placeholder="Message" name="message" class="form-control" rows="4" wrap="hard"></textarea>
         </div>
         <button type="submit" class="btn btn-dark">Submit</button>
       </form>
