--- a/themes/hugo-uilite/layouts/partials/services.html
+++ b/themes/hugo-uilite/layouts/partials/services.html
@@ -10,13 +10,14 @@
     <div class="col-12 col-lg-6 col-md-6 mb-3">
       <div class="card p-4">
         <i class="mt-3  {{ $element.icon }} fa-3x"></i>
-        <h5 class="mt-4">{{ $element.title }}</h5>
         {{ $website := $element.website }}
         {{ if $website }}
-        <a target="_blank" href="{{ $website }}" rel="noopener noreferrer">
+        <h5 class="mt-4">
           <i class="fas fa-link"></i>
-          {{ $website }}
-        </a>
+          <a href={{$website}} target="_blank">{{ $element.title }}</a>
+        </h5>
+        {{else}}
+          <h5 class="mt-4">{{ $element.title }}</h5>
         {{ end }}
         <p class="text-muted">{{ $element.description }}</p>
       </div>
